Fix table row spacing in Chrome.

--- a/puzzlejs/puzzle.css
+++ b/puzzlejs/puzzle.css
@@ -26,6 +26,11 @@
     user-select: none;
 }
 
+.puzzle-entry tr {
+    display: block;
+    height: 40px;
+}
+
 .puzzle-entry td {
     width: 40px;
     height: 40px;
